# browse

./: .gitignore  Cargo.toml  readme.md
src/: app.rs  browser.rs  commands.rs  config.rs  error.rs  file_operations.rs  file_preview.rs  lib.rs  main.rs  settings.rs  tabs.rs  ui.rs  utils.rs
