[package]
name = "browse"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.29"
crossterm = "0.29"
color-eyre = "0.6"
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dirs = "5.0"
infer = "0.15"

[features]
default = []

# Optimize for release builds
[profile.release]
lto = true           # Link-time optimization
codegen-units = 1    # Better optimization
panic = "abort"      # Smaller binary size
strip = true         # Remove debug symbols

# Faster debug builds
[profile.dev]
opt-level = 1        # Some optimization for better performance during development 